BJS2-23755 bug fixes